vlib/v/checker/tests/orm_upsert_array_error.vv
import db.sqlite

struct UpsertArrayUser {
	id   int @[primary]
	name string
}

fn main() {
	mut db := sqlite.connect(':memory:') or { panic(err) }
	users := [UpsertArrayUser{
		id:   1
		name: 'Alice'
	}]
	sql db {
		upsert users into UpsertArrayUser
	}!
}
